# security_huks

./: .gitignore  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  bundle.json  compile_commands.json  hisysevent.yaml  huks.gni  ohos.build  plan.md  test.cpp  testBlob
frameworks/crypto_lite/js/napi/: BUILD.gn  cipher.cpp  cipher_napi.cpp
frameworks/huks_lite/: BUILD.gn
frameworks/huks_standard/main/common/: BUILD.gn
frameworks/huks_standard/main/core/: BUILD.gn
frameworks/huks_standard/main/crypto_engine/: BUILD.gn
frameworks/huks_standard/main/os_dependency/: BUILD.gn
interfaces/inner_api/huks_lite/: BUILD.gn  hks_tmp_client.c
interfaces/inner_api/huks_standard/main/: BUILD.gn  libhukschipsetsdk.map  libhukssdk.map
interfaces/js/crypto_extension_module/: BUILD.gn  crypto_ext_module.cpp  crypto_extension_ability.js
interfaces/kits/ani/: @ohos.base.d.ets  @ohos.security.huks.d.ets  @ohos.security.huks.ets  BUILD.gn  aniTest.ets  arktsconfig.json  huksInterface.ets  huksInterface_backup.ets
interfaces/kits/ani/ani_implement/: BUILD.gn
interfaces/kits/ani/cache/: @ohos.base.d.abc  @ohos.security.huks.d.abc  aniTest.abc  huksInterface.abc
interfaces/kits/ani/include/: huks_ani_common.h
interfaces/kits/ani/src/: ani_test.cpp  huks_ani_common.cpp  huks_ani_impl.cpp
interfaces/kits/c/: BUILD.gn  libhuks.ndk.json  libhuks_external_crypto.map  libhuks_external_ndk.map  libhuksndk.map
interfaces/kits/c/include/: native_huks_api.h  native_huks_api_adapter.h  native_huks_param.h  native_huks_type.h
interfaces/kits/c/src/: BUILD.gn  native_huks_api.c  native_huks_api_adapter.c  native_huks_param.c
interfaces/kits/liteapi/: BUILD.gn
interfaces/kits/liteapi/include/: hks_lite_api.h  hks_lite_api_common.h
interfaces/kits/liteapi/src/: hks_lite_api.cpp  hks_lite_api_abort_session.cpp  hks_lite_api_common.cpp  hks_lite_api_delete_key_item.cpp  hks_lite_api_export_key_item.cpp  hks_lite_api_generate_key_item.cpp  hks_lite_api_get_key_properties.cpp  hks_lite_api_has_key_item.cpp  hks_lite_api_import_key_item.cpp  hks_lite_api_import_wrapped_key_item.cpp  hks_lite_api_init_session.cpp  hks_lite_api_is_key_item_exist.cpp  hks_lite_api_update_finish_session.cpp
interfaces/kits/napi/: BUILD.gn  libhuksnapi.map
interfaces/kits/napi/include/: huks_napi_common.h  huks_napi_import_wrapped_key.h
interfaces/kits/napi/src/: huks_napi.cpp  huks_napi_abort.cpp  huks_napi_agree_key.cpp  huks_napi_attest_key.cpp  huks_napi_common.cpp  huks_napi_decrypt.cpp  huks_napi_delete_key.cpp  huks_napi_derive_key.cpp  huks_napi_encrypt.cpp  huks_napi_export_key.cpp  huks_napi_finish.cpp  huks_napi_generate_key.cpp  huks_napi_get_certificate_chain.cpp  huks_napi_get_key_properties.cpp  huks_napi_import_key.cpp  huks_napi_import_wrapped_key.cpp  huks_napi_init.cpp  huks_napi_is_key_exist.cpp  huks_napi_mac.cpp  huks_napi_sign.cpp  huks_napi_ukey_module.cpp  huks_napi_unwrap_key.cpp  huks_napi_update.cpp  huks_napi_update_finish.cpp  huks_napi_verify.cpp  huks_napi_wrap_key.cpp
services/huks_standard/: BUILD.gn  huks_service.cfg  huks_service.rc
services/huks_standard/huks_engine/main/: BUILD.gn
services/huks_standard/huks_service/main/: BUILD.gn
test/fuzz_test/: BUILD.gn
test/fuzz_test/hksabort_fuzzer/: BUILD.gn  hksabort_fuzzer.cpp  hksabort_fuzzer.h
test/fuzz_test/hksattestkey_fuzzer/: BUILD.gn  hksattestkey_fuzzer.cpp  hksattestkey_fuzzer.h
test/fuzz_test/hksbnexpmod_fuzzer/: BUILD.gn  hksbnexpmod_fuzzer.cpp  hksbnexpmod_fuzzer.h
test/fuzz_test/hksbnexpmod_fuzzer/corpus/: init
test/fuzz_test/hksdeletekey_fuzzer/: BUILD.gn  hksdeletekey_fuzzer.cpp  hksdeletekey_fuzzer.h
test/fuzz_test/hksexportpublickey_fuzzer/: BUILD.gn  hksexportpublickey_fuzzer.cpp  hksexportpublickey_fuzzer.h
test/fuzz_test/hksfinish_fuzzer/: BUILD.gn  hksfinish_fuzzer.cpp  hksfinish_fuzzer.h
test/fuzz_test/hksgeneratekey_fuzzer/: BUILD.gn  hksgeneratekey_fuzzer.cpp  hksgeneratekey_fuzzer.h
test/fuzz_test/hksgetcertificatechain_fuzzer/: BUILD.gn  hksgetcertificatechain_fuzzer.cpp  hksgetcertificatechain_fuzzer.h
test/fuzz_test/hksgetkeyparamset_fuzzer/: BUILD.gn  hksgetkeyparamset_fuzzer.cpp  hksgetkeyparamset_fuzzer.h
test/fuzz_test/hksgetsdkversion_fuzzer/: BUILD.gn  hksgetsdkversion_fuzzer.cpp  hksgetsdkversion_fuzzer.h
test/fuzz_test/hkshash_fuzzer/: BUILD.gn  hkshash_fuzzer.cpp  hkshash_fuzzer.h
test/fuzz_test/hksimportkey_fuzzer/: BUILD.gn  hksimportkey_fuzzer.cpp  hksimportkey_fuzzer.h
test/fuzz_test/hksimportwrappedkey_fuzzer/: BUILD.gn  hksimportwrappedkey_fuzzer.cpp
test/fuzz_test/hksinit_fuzzer/: BUILD.gn  hksinit_fuzzer.cpp  hksinit_fuzzer.h
test/fuzz_test/hkskeyexist_fuzzer/: BUILD.gn  hkskeyexist_fuzzer.cpp  hkskeyexist_fuzzer.h
test/fuzz_test/hksserviceonremoterequest_fuzzer/: BUILD.gn  hks_service_on_remote_request_fuzzer.cpp  hks_service_on_remote_request_fuzzer.h  project.xml
test/fuzz_test/hksupdate_fuzzer/: BUILD.gn  hksupdate_fuzzer.cpp  hksupdate_fuzzer.h
test/fuzz_test/innerapi_fuzzer/: BUILD.gn  execute.md  hks_fuzz_stats.h  hks_fuzz_util.cpp  hks_fuzz_util.h  plan.md
test/fuzz_test/innerapi_fuzzer/hksabort_fuzzer/: BUILD.gn  hksabort_fuzzer.cpp
test/fuzz_test/innerapi_fuzzer/hksagreekey_fuzzer/: BUILD.gn  hksagreekey_fuzzer.cpp  hksagreekey_fuzzer.h
test/fuzz_test/innerapi_fuzzer/hksanonattestkey_fuzzer/: BUILD.gn  (+2 more)
test/fuzz_test/ipc_entry_fuzzer/: BUILD.gn  hks_service_on_remote_request_fuzzer.cpp
test/unittest/modify_old_version_key_test_util/: BUILD.gn  hks_test_modify_old_key.c  hks_test_modify_old_key.h
utils/crypto_adapter/: BUILD.gn  hks_client_service_adapter.c  hks_client_service_adapter.h  hks_client_service_adapter_common.c  hks_client_service_adapter_common.h  hks_client_service_adapter_lite.c
utils/file_iterative_reader/: BUILD.gn
utils/file_iterative_reader/include/: hks_iterative_reader.h
utils/file_iterative_reader/src/: hks_iterative_reader.c
utils/list/: BUILD.gn  hks_double_list.c  hks_double_list.h  hks_operation.c  hks_operation.h
utils/mutex/: BUILD.gn  hks_mutex.c  hks_pthread_util.h
(+2624 files in other folders)
