#
# Copyright (c) 2020-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//base/security/huks/build/config.gni")
import("//base/security/huks/huks.gni")

group("huks_sdk") {
  if (os_level == "mini" || os_level == "small") {
    deps =
        [ "//base/security/huks/interfaces/inner_api/huks_lite:huks_3.0_sdk" ]
    if (ohos_build_type == "debug" || hks_enable_test) {
      deps += [ "//base/security/huks/test:unittest" ]
    }
  }
  if (os_level == "mini" && enable_huks_lite_hap) {
    deps += [ "//base/security/huks/interfaces/kits/liteapi:ace_kit_huks" ]
  }
}

group("huks_server") {
  if (os_level == "small") {
    deps = [
      "//base/security/huks/interfaces/inner_api/huks_lite:huks_server",

      # script for transfer fils in old path to new path, in case of upgradation
      "//base/security/huks/interfaces/inner_api/huks_lite:hks_compatibility_bin",
      "//base/security/huks/services/huks_standard/huks_engine/main/core:huks_engine_core_standard",
    ]
  }
}
