# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/huks/build/config.gni")
import("//build/ohos.gni")

ohos_prebuilt_etc("huks_service.rc") {
  source = "huks_service.cfg"
  relative_install_dir = "init"
  subsystem_name = "security"
  part_name = "huks"
}

ohos_shared_library("huks_service") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }
  subsystem_name = "security"
  part_name = "huks"
  version_script = "libhuksservice.map"

  configs = [
    "//base/security/huks/frameworks/config/build:l2_standard_common_config",
  ]
  deps = [
    ":huks_service.rc",
    "//base/security/huks/services/huks_standard/huks_service/main:libhuks_service_standard_static",
  ]
  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}
