# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/huks/build/config.gni")
import("//build/ohos.gni")
import("//build/test.gni")

#################################group#########################################
group("fuzztest") {
  testonly = true
  if (os_level == "standard") {
    if (huks_test_suite_running_environment == "system") {
      deps = [
        "//base/security/huks/test/fuzz_test/hksserviceonremoterequest_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksabort_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksagreekey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksanonattestkey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksattestkey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksbnexpmod_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hkschangestoragelevel_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksclientipcserialization_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksdecrypt_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksdeletekey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksderivekey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksencrypt_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksexportpublickey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksfiletransfer_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksfinish_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgeneratekey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgeneraterandom_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgetcertificatechain_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgeterrormsg_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgetkeyinfolist_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgetkeyparamset_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksgetsdkversion_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hkshash_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksimportkey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksimportwrappedkey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksinit_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksinitialize_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksipc_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hkskeyexist_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hkslistaliases_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksmac_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksprocessattestkeyasyncreply_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksrefreshkeyinfo_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksrename_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksreportwrapper_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksrkc_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hkssign_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksstorage_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksupdate_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksvalidatecertchain_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksverify_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hkswrapkey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksukey_fuzzer:fuzztest",
        "//base/security/huks/test/fuzz_test/innerapi_fuzzer/hksconcurrent_fuzzer:fuzztest",
      ]
    }
  }
}
