# Copyright (C) 2024-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/huks/build/config.gni")
import("//base/security/huks/huks.gni")
import("//build/ohos.gni")

config("huks_config") {
  include_dirs = [ "include" ]
}

# Reservation for scenarios that require dynamic parameter callbacks
ohos_static_library("libhuks_file_iterative_reader_static") {
  subsystem_name = "security"
  part_name = "huks"
  public_configs = [ ":huks_config" ]

  sources = [ "src/hks_iterative_reader.c" ]

  deps = [
    "../../frameworks/huks_standard/main/common:libhuks_common_standard_static",
    "../file_operator:libhuks_utils_file_operator_static",
  ]

  complete_static_lib = true

  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    cfi = true
    debug = false
    cfi_cross_dso = true
    boundary_sanitize = true
    ubsan = true
  }
  configs = [ "../../frameworks/config/build:l2_standard_common_config" ]
  external_deps = [ "hilog:libhilog" ]
}
