# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/huks/build/config.gni")
import("//base/security/huks/huks.gni")
import("//build/ohos.gni")

config("huks_config") {
  include_dirs = [ "./" ]
}

if (os_level == "standard") {
  ohos_static_library("libhuks_utils_mutex_static") {
    branch_protector_ret = "pac_ret"

    sanitize = {
      integer_overflow = true
      cfi = true
      debug = false
      cfi_cross_dso = true
      boundary_sanitize = true
      ubsan = true
    }
    subsystem_name = "security"
    part_name = "huks"
    public_configs = [ ":huks_config" ]
    configs = [
      "//base/security/huks/frameworks/config/build:l2_standard_common_config",
    ]
    include_dirs = [
      "//base/security/huks/frameworks/huks_standard/main/common/include",
      "//base/security/huks/interfaces/inner_api/huks_standard/main/include",
    ]
    defines = [
      "_HARDWARE_ROOT_KEY_",
      "_HUKS_LOG_ENABLE_",
    ]
    sources = [ "hks_mutex.c" ]
    cflags = [
      "-Wall",
      "-Werror",
    ]
    deps = [ "//base/security/huks/frameworks/huks_standard/main/os_dependency:libhuks_mem_standard_static" ]
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
    complete_static_lib = true
  }
} else {
  ohos_static_library("libhuks_utils_mutex_static") {
    public_configs = [ ":huks_config" ]
    configs = [
      "//base/security/huks/frameworks/config/build:l1_small_common_config",
    ]

    include_dirs = [
      "//base/security/huks/frameworks/huks_standard/main/common/include",
      "//base/security/huks/interfaces/inner_api/huks_standard/main/include",
    ]
    sources = [ "hks_mutex.c" ]

    deps = [ "//base/security/huks/frameworks/huks_standard/main/os_dependency:libhuks_os_dependency_small_static" ]
    external_deps = [ "hilog_lite:hilog_shared" ]
    complete_static_lib = true
  }
}
